--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
   },
   "homepage": "https://github.com/tigejw/exhibit-be#readme",
   "devDependencies": {
+    "@pollyjs/adapter-node-http": "^6.0.6",
+    "@pollyjs/core": "^6.0.6",
+    "@pollyjs/persister-fs": "^6.0.6",
     "jest": "^30.1.3",
+    "nock": "^14.0.10",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4"
   },
   "dependencies": {
     "axios": "^1.12.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "setup-polly-jest": "^0.11.0"
   }
 }
